# ClassNoteAI

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DRAG_DROP_TROUBLESHOOTING.md  PUSH_TO_GITHUB.md  README.md  prd-tauri.md
.agent/rules/: tauriwindows.md
.agent/skills/release_process/: SKILL.md
.agent/skills/tauri_permissions/: SKILL.md
.agent/skills/unified_queue_design/: SKILL.md
.github/: dependabot.yml
.github/workflows/: agent-bridge-smoke.yml  eval-nightly.yml  merge-update-manifest.yml  pr-check.yml  release-macos.yml  release-windows.yml  release-windows.yml.disabled  release.yml
ClassNoteAI/: .gitignore  GITHUB_RELEASE.md  README.md  VERSION  configure_ollama.sh  fix_bundle.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ClassNoteAI/.github/workflows/: release.yml
ClassNoteAI/docs/follow-ups/: overnight-2026-04-25.md  parakeet-rs-windows-ort-hang-handoff.md  v0.5.2-deferred.md
ClassNoteAI/docs/roadmap/: v0.6.0-plan.md
ClassNoteAI/docs/sop/: SIGNING.md  (+4 more)
ClassNoteAI/evals/: .gitignore  README.md
ClassNoteAI/public/: connection-test.html
ClassNoteAI/scripts/: RELEASE_NOTES.md  cdp.cjs  cnai-agent.mjs  convert_nllb_to_ct2.py  convert_opus_mt_to_ct2.py  dev-ctl.mjs  dev-ephemeral.mjs  native-build-cache-key.sh  verify_translation.py
ClassNoteAI/src/: App.css  App.tsx  index.css  main.tsx
ClassNoteAI/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
ClassNoteAI/src-tauri/capabilities/: default.json
ClassNoteAI/src-tauri/examples/: full_pipeline_eval.rs  nemotron_eval.rs  ort_minimal.rs  phase0_translation_eval.rs  phase2_vad_eval.rs  speaker_eval.rs  test_nllb.rs  test_translation.rs  verify_ct2.rs
ClassNoteAI/src-tauri/resources/binaries/: .gitkeep
ClassNoteAI/src-tauri/resources/cuda/: .gitkeep
ClassNoteAI/src-tauri/scripts/: bootstrap-vendor.sh  codex-delegate.sh  fetch-onnxruntime.sh  gpu-dev-env-windows.bat  launch-cuda-release.bat  smoke-llama-sidecar.ps1  win-cargo-check.bat  win-tauri-build.bat  win-tauri-dev-cuda.bat  win-tauri-dev.bat  win-toolchain.cmake  winbuild.bat
ClassNoteAI/src-tauri/src/: agent_bridge.rs  dev_flags.rs  lib.rs  main.rs  oauth.rs  sync.rs  updater.rs
ClassNoteAI/src-tauri/src/asr/: mod.rs  parakeet_engine.rs  parakeet_model.rs
ClassNoteAI/src-tauri/src/diagnostics/: mod.rs
ClassNoteAI/src-tauri/src/downloads/: downloader.rs  mod.rs  model_manager.rs
ClassNoteAI/src-tauri/src/embedding/: download.rs  mod.rs  service.rs
ClassNoteAI/src-tauri/src/gpu/: mod.rs
ClassNoteAI/src-tauri/src/parakeet/: audio.rs  commands.rs  mod.rs  model.rs  service.rs
ClassNoteAI/src-tauri/src/paths/: app_dirs.rs  mod.rs
ClassNoteAI/src-tauri/src/recording/: mod.rs  video_import.rs
ClassNoteAI/src-tauri/src/setup/: installer.rs  mod.rs  progress.rs  requirements.rs
ClassNoteAI/src-tauri/src/storage/: database.rs  database_test.rs  mod.rs  models.rs
ClassNoteAI/src-tauri/src/translation/: ctranslate2.rs  download.rs  fine.rs  gemma.rs  gemma_model.rs  gemma_sidecar.rs  google.rs  mod.rs  model.rs  rough.rs
ClassNoteAI/src-tauri/src/utils/: command.rs  mod.rs  onnx.rs  sys_proxy.rs
ClassNoteAI/src-tauri/src/vad/: mod.rs  silero.rs
ClassNoteAI/src-tauri/src/whisper/: download.rs  guards.rs  mod.rs  model.rs  test_utils.rs  transcribe.rs
ClassNoteAI/src-tauri/tests/: test_opus_mt_fixes.rs  test_storage.rs  test_translation.rs  test_translation_comprehensive.rs  test_translation_standalone.rs  whisper_test.rs
ClassNoteAI/src-tauri/vendor-patches/: crate-checksums.txt  ct2rs-build.patch  ct2rs-cmakelists.patch  esaxx-rs-build.patch
ClassNoteServer/: Cargo.toml  classnote_server.db-shm  classnote_server.db-wal
ClassNoteServer/src/: auth.rs  cron.rs  db.rs  devices.rs  events.rs  files.rs  main.rs  ollama.rs  sync.rs  worker.rs
docs/: ARCHITECTURE.md  BUSINESS_LOGIC_STATUS.md  FIXES_FIELD_MISSING.md  GITHUB_PUSH_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  MODEL_CONFIGURATION.md  README.md  UPLOAD_MODEL_TO_GITHUB.md
docs/audits/: cp75.20-cleanup-plan-2026-04-29.md  v0.7.0-alpha.1-ui-gaps-2026-04-29.md
docs/design/: speech-pipeline-v0.6.5.md
docs/development/: AGENT_CLI.md  BUILD.md  BUILD_ISSUE.md  DEBUG.md  DEVELOPMENT.md  DMG_FIX.md  gpu-dev-windows.md
docs/evals/: phase0-analysis-2026-04-23.md  phase0-translation-ab-2026-04-23.md  phase2-analysis-2026-04-23.md  phase2-vad-comparison-2026-04-23.md
docs/known-issues/: v0.6.0-alpha.1.md
docs/landing/: index.html
docs/pdf/: FEATURES.md  PDF_VIEWER.md
docs/storage/: STORAGE.md
docs/transcription/: CHUNKING_BEST_PRACTICES.md  VAD_IMPLEMENTATION.md
docs/translation/: ARCHITECTURE.md  COMPARISON_RESULTS.md  FEATURES.md  IMPROVED_IMPLEMENTATION.md  ONNX_TRANSLATION_INTEGRATION.md  OPUS_MT_BEST_PRACTICES.md  TESTING_GUIDE.md  TRANSLATION.md  TRANSLATION_COMPARISON_GUIDE.md  TRANSLATION_STATUS.md  TRANSLATION_STATUS_ASSESSMENT.md
docs/whisper/: FEATURES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  QUANTIZATION_COMPARISON.md  TRANSCRIPTION_ISSUES.md  WHISPER_MODEL_OPTIONS.md  WHISPER_TRANSCRIPTION.md
scripts/: README.md  build_tokenizer_from_spm.py  check_opus_big.py  check_rust.sh  check_version_consistency.py  compare_all_implementations.py  compare_translation_python_rust.py  compare_translation_via_tauri.sh  comparison_all_results.json  convert_m2m100_to_onnx.py  convert_mbart_to_onnx.py  convert_model_to_onnx.py  convert_nllb_to_onnx.py  create_correct_tokenizer_json.py  debug_empty_output.py  debug_nllb_inputs.py  debug_tokenizer.py  evaluate_models.py  fix_mbart_generation.py  fix_nllb_tokenizer.py  fix_tokenizer.py  fix_tokenizer_json.py  model_eval_results.json  original_model_results.json  package_models_fast.sh  package_models_for_github.sh  quantize_nllb.py  requirements.txt  resave_tokenizer.py  run_all_tests.sh  run_translation_comparison.sh  rust_translation_results.json  setup_cargo_env.sh  test_onnx_nllb.py  test_opus_mt_comprehensive.py  test_opus_mt_model.py  test_original_model.py  test_rust_vs_python.sh  test_translation_rust.rs  test_vad.py  (+3 more)
(+469 files in other folders)
