[package]
name = "classnoteai"
version = "0.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "classnoteai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["candle-embed"]
# Candle embedding - 使用 Candle 框架進行文本 Embedding（預設啟用）
candle-embed = ["candle-core", "candle-nn", "candle-transformers", "hf-hub"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
num_cpus = "1.0"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"
# Candle ML framework for embeddings (no protobuf conflict)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
# Hugging Face Hub for model downloads
hf-hub = { version = "0.3", optional = true }
# Tokenizer for text preprocessing
tokenizers = "0.21"
# Random number generation for sampling
rand = "0.8"
# SQLite database for data storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# ZIP file extraction for model downloads
zip = "0.6"
# Regular expressions for text preprocessing
regex = "1.10"
# URL encoding for Google Translate unofficial API
urlencoding = "2.1"
# CTranslate2 for efficient neural machine translation
# ct2rs provides Rust bindings to CTranslate2
# Note: Requires CMake and C++ compiler for first-time build
ct2rs = { version = "0.9", features = ["default"] }
# File system utilities
walkdir = "2"
dirs = "5"
tauri-plugin-http = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
