[package]
name = "classnoteai"
version = "0.6.5-alpha.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "classnoteai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["candle-embed", "speaker-diarization"]
# Candle embedding - 使用 Candle 框架進行文本 Embedding（預設啟用）
candle-embed = ["candle-core", "candle-nn", "candle-transformers", "hf-hub"]
nmt-local = []
speaker-diarization = ["parakeet-rs/sortformer"]
gpu-directml = ["ort/directml", "parakeet-rs/directml"]
gpu-coreml = ["ort/coreml", "parakeet-rs/coreml"]
bundle-cuda = []

# Whisper GPU backends. All three are opt-in and OFF by default — the
# CPU build stays the baseline, so any regression from a broken
# backend can't brick the default install. Enable exactly one of
# these at build time depending on the target platform.
#
#   gpu-cuda     NVIDIA CUDA. Requires CUDA Toolkit (~3 GB) present at
#                build time; at runtime the cudart64_* DLL ships next
#                to the app (~10–30 MB). On an RTX 4060 Ti,
#                large-v3-turbo runs ~20× realtime vs ~0.5× on CPU.
#                Windows + Linux only.
#   gpu-vulkan   Cross-vendor GPU via Vulkan. Build needs the Vulkan
#                SDK (~500 MB); runtime uses the Vulkan loader that
#                ships with every modern GPU driver — no extra DLLs.
#                Works on NVIDIA, AMD, Intel. Slightly slower than
#                native CUDA but the broadest GPU coverage.
#   gpu-metal    Apple Metal. Auto-enabled below via target_os cfg, so
#                macOS users never need to pass a flag.
#
# Build examples:
#   cargo build                                        # CPU (default)
#   cargo build --features gpu-cuda                    # Windows + NVIDIA
#   cargo build --features gpu-vulkan                  # Windows + AMD/Intel or Linux
#   # (no extra flag on macOS — metal is wired via target-specific dep below)
# Each GPU feature fans out to every crate that can benefit. User
# directive: "GPU 的加速可以用在任何支援 GPU 加速的項目上。只要我們手邊
# 有 GPU 資源，且執行速度比 CPU 快，就應該盡可能地使用". So:
#   - whisper-rs              speech-to-text (headline win; 20× on RTX)
#   - candle-core/nn/transformers   BGE-small embedding for the RAG
#                             index. Halves index time on a 400-chunk
#                             lecture.
#   - ct2rs                   local translation (M2M-100). `cuda-dynamic-
#                             loading` means the built binary still
#                             starts on a machine without cudart + just
#                             falls back to CPU for translation, rather
#                             than refusing to launch. Important because
#                             the same binary ships to users without
#                             NVIDIA drivers.
# Vulkan/Metal aren't supported by ct2rs (CUDA-only GPU backend). Metal
# covers whisper + candle; Vulkan covers only whisper.
# GPU features for runtime ML backends. Release CI uses `bundle-cuda`
# for the CUDA installer variant so it can ship the CUDA llama.cpp
# sidecar without compiling the heavier Rust CUDA backend.
gpu-cuda = ["ort/cuda", "parakeet-rs/cuda"]
gpu-vulkan = []
gpu-metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
# whisper-rs removed in the v2 streaming refactor. ASR is now the
# in-process Nemotron streaming model via parakeet-rs (see
# `crate::asr::parakeet_engine`).
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
num_cpus = "1.0"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"
# Candle ML framework for embeddings (no protobuf conflict).
# Pinned to 0.9: bumped from 0.8 because 0.8's cudarc 0.13 hardcodes
# a "supported CUDA toolkit" list that rejects 13.x. 0.9 uses cudarc
# 0.16 which accepts CUDA 13 via the `cuda-version-from-build-system`
# feature. No source changes needed for the 0.8→0.9 bump — the
# Module / VarBuilder / tensor APIs we use are unchanged.
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
# Hugging Face Hub for model downloads
hf-hub = { version = "0.3", optional = true }
# Tokenizer for text preprocessing
tokenizers = "0.21"
# Random number generation for sampling
rand = "0.8"
# SQLite database for data storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# ZIP file extraction for model downloads
zip = "0.6"
# Regular expressions for text preprocessing
regex = "1.10"
# URL encoding for Google Translate unofficial API
urlencoding = "2.1"
# ct2rs removed in the v2 streaming refactor. Translation moved to the
# TranslateGemma sidecar (llama-server, see `crate::translation::gemma`).
# File system utilities
walkdir = "2"
dirs = "6"
# Tiny TOML parser for `dev_flags.rs` — experimental toggles read
# before Tauri / SQLite init (so they can't live in the main DB).
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
tauri-plugin-http = "2"
tauri-plugin-process = "2"
# Stay on `load-dynamic`: tried `download-binaries` on 2026-04-25
# (now that ct2rs / sentencepiece-sys are gone) but tokenizers'
# transitive `esaxx-rs` is built with /MT (static CRT) while ort's
# prebuilt onnxruntime is /MD (dynamic CRT) since rc.5 — LNK2038
# `RuntimeLibrary` mismatch on hundreds of symbols, no clean way to
# unify without rebuilding esaxx-rs from source.
#
# The downside of load-dynamic is the rc.12 hang on Windows
# (https://github.com/pykeio/ort/issues/559 — Mac M4 reporter, same
# symptom on Windows). Workaround: standalone example binaries
# can't easily call `Session::builder()` directly. The Tauri app
# itself is unaffected because the path through the Tauri runtime
# initialises ort differently.
#
# Pinned to rc.12 to unify with parakeet-rs's ort dep (it requires
# exactly 2.0.0-rc.12 and pre-release semver doesn't allow rc.9 →
# rc.12 promotion automatically).
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
libloading = "0.8"
ndarray = "0.15"
# Phase 3 of speech-pipeline-v0.6.5 (#53): compression-ratio guard
# against Whisper repetition-loop hallucinations. Already transitive
# via reqwest/tokio/etc.; declaring direct so the version constraint
# is ours and future transitive bumps can't silently break the guard.
flate2 = "1"
# In-process Nemotron streaming ASR (cache-aware RNNT, 0.6B EN). Pure
# Rust + ort, no Python sidecar. We pin `default-features = false` to
# strip the crate's `ort-defaults` feature, which would activate
# `ort/default` and pull in `download-binaries` — that fights with our
# `load-dynamic` strategy and the bundled onnxruntime.dll story (see
# the ort comment above). `cpu` is an empty marker feature kept for
# documentation; ort backend selection happens via our top-level ort
# features (cuda/directml are future work).
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu"] }

[dev-dependencies]
tempfile = "3.8"
hound = "3.5"

# macOS-only auto-enable of the Metal backends for every crate that
# supports it. This keeps the default-feature story simple on
# Windows/Linux (CPU unless the packager opts into gpu-cuda/gpu-vulkan)
# while giving every macOS build GPU acceleration across Whisper AND
# the BGE embedding model with zero extra build flags — Metal is
# universally available on every Mac since ~2016 so there's no
# detection story to worry about.
#
# Cargo unifies features between the main `[dependencies]` block and
# these target-specific overrides, so `candle-core` (already declared
# above as `optional = true`) gets its `metal` feature union'd in
# when building for macOS.
#
# macOS-only Metal feature wiring for Candle (BGE embedding). Whisper +
# CT2 are gone in v2 so the only thing here is the embedding model.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", optional = true, features = ["metal"] }
candle-nn = { version = "0.9", optional = true, features = ["metal"] }
candle-transformers = { version = "0.9", optional = true, features = ["metal"] }

[target.'cfg(windows)'.dependencies]
# Win32 LibraryLoader APIs (`AddDllDirectory`, `SetDefaultDllDirectories`).
# Used by `utils::onnx::init_onnx` to make Windows' transitive-dep search
# look in the bundled-DLL directory FIRST, before the legacy
# current-directory / PATH / System32 sequence. PATH-prepend alone wasn't
# enough to keep Windows from picking up `C:\Windows\System32\onnxruntime.dll`
# (WinML 1.17) and hanging `ort::init_from`. See
# `docs/follow-ups/parakeet-rs-windows-ort-hang-handoff.md`.
windows-sys = { version = "0.61", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
# Prevents the app from spawning a second window / process. The app
# holds exclusive resources (SQLite, Candle model, audio device, port
# 9222 for CDP dev) so a second instance would either error out on
# conflicting locks or silently corrupt state. The plugin's callback
# pulls the already-running window to the front instead.
tauri-plugin-single-instance = "2"

# [patch.crates-io] for ct2rs is gone with the ct2rs dep removal.
# vendor/ct2rs and vendor/esaxx-rs directories are now dead and can be
# git-removed in a follow-up cleanup commit.

# CI-only profile for `cargo check` in pr-check.yml. Inherits dev but
# strips ALL debug info — both rustc-side (debug = 0) AND C/C++ build
# scripts via cc-rs (cargo sets DEBUG=false in build-script env when the
# profile's `debug` is 0). This is the only way to skip debuginfo on
# Windows MSVC C++ builds (whisper-rs-sys / ct2rs / sentencepiece-sys),
# which dominate Windows pr-check time and don't honor RUSTFLAGS.
#
# Local dev still uses `dev` profile with full debuginfo (breakpoints,
# panic backtraces). Closes #119; #116's RUSTFLAGS env is now redundant
# but kept for belt-and-suspenders + visibility.
[profile.ci-check]
inherits = "dev"
debug = 0
incremental = false  # CARGO_INCREMENTAL=0 already set in workflow env;
                     # being explicit here avoids profile/env mismatch
                     # warnings if the env is ever dropped.
